--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,14 @@
 
 	<dependencies>
 
+		<!-- lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.0</version>
+			<scope>provided</scope>
+		</dependency>
+
 		<!-- JavaMail -->
 		<dependency>
 			<groupId>com.sun.mail</groupId>
