게시물에 이미지추가중 07/19

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,12 @@
 
 	<dependencies>
 	
+	<!-- COS -->
+	  <dependency>
+          <groupId>servlets.com</groupId>
+          <artifactId>cos</artifactId>
+          <version>05Nov2002</version>
+      </dependency> 
 		<!-- Apache Commons File Upload / 혜윤 -->
 		<dependency>
 			<groupId>commons-fileupload</groupId>
