--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -39,7 +39,7 @@
 
 
 
-	<!-- <error-page>
+	 <error-page>
 		<error-code>400</error-code>
 		<location>/resources/error/errorpage.jsp</location>
 	</error-page>
@@ -58,5 +58,5 @@
 	<error-page>
 		<exception-type>java.lang.Throwable</exception-type>
 		<location>/resources/error/errorpage.jsp</location>
-	</error-page> -->
+	</error-page>
 </web-app>
